<resources>
    <string name="app_name">RetailWorks - Field</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Sign in</string>

    <string name="abort_visit">Are you sure you want to discard changes and abort visit?</string>
    <string name="about">About</string>
    <string name="add">Add</string>
    <string name="alert">Alert!</string>
    <string name="already_visited">The Store has already been marked visited during the current
        Call Cycle. Cheers!</string>
    <string name="attendance">Attendance</string>
    <string name="attendance_alert1">"Are you sure you want to mark your day as: "</string>
    <string name="attendance_alert2">\? This cannot be undone.</string>
    <string name="attendance_marked">"Day marked as: "</string>
    <string name="syncing_with_server">"Syncing with server, please wait..."</string>
    <string name="remote_sync_failed">"Server Sync Failed!"</string>
    <string name="attendance_sync_failed">"Attendance Sync Failed, Please Retry..."</string>


    <string name="back">Back</string>
    <string name="bad_credentials">Incorrect username/password</string>
    <string name="call_cycle">CallCycle</string>
    <string name="checkin">Check In</string>
    <string name="checking_end">"Are you sure you want to submit the changes? "</string>
    <string name="checking_start">"Are you sure you want to start the visit? "</string>
    <string name="checking_suggest">"Select Store status from above"</string>
    <string name="snapshot_suggest">"Take a snapshot of the Store"</string>
    <string name="save_suggest">"Press Save to record changes"</string>
    <string name="visit_start_suggest">"Start visit to take orders"</string>
    <string name="locate_suggest">"Locate Store on map"</string>
    <string name="closed">Closed</string>
    <string name="company">Company</string>
    <string name="connected">Connected …</string>
    <string name="connecting">Connecting …</string>
    <string name="cycle_day_limit_reached">You cannot fetch days beyond call cycle days</string>
    <string name="done">Done</string>
    <string name="down">Down</string>
    <string name="loading_calls">Loading Call Cycle</string>
    <string name="loading_outlets">Loading Outlet List</string>
    <string name="loading_products">Loading Product Info</string>
    <string name="loading_images">Downloading Product Images</string>
    <string name="loading_visits">Making Visit Plan</string>
    <string name="day_plan">"What is your day plan?"</string>
    <string name="dupe_attendance">Attendance already marked for the day and can not be changed!</string>
    <string name="emp_name">Emp Name</string>
    <string name="end">End</string>
    <string name="exit">Exit</string>
    <string name="go">Go</string>
    <string name="help">Help</string>
    <string name="holiday">Holiday</string>
    <string name="in">"In: "</string>
    <string name="info">Info</string>
    <string name="logged_in_as">"You're Logged in as "</string>
    <string name="inventory">Inventory</string>
    <string name="last_visit">Last Visit</string>
    <string name="loading_data">Loading data …</string>
    <string name="locate_map">Locate On Map!</string>
    <string name="logging_in">Logging in …</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="logout_msg">Do you want to logout from the App?</string>
    <string name="no_calls_on_holiday">No calls on a Holiday!</string>
    <string name="not_connected">No Connection</string>
    <string name="notfound">NotFound</string>
    <string name="null_bitmap">Please click the store picture first.</string>
    <string name="off">"   Off   "</string>
    <string name="on">"   On   "</string>
    <string name="open">Open</string>
    <string name="order_target">Order Target</string>
    <string name="orders">Orders</string>
    <string name="orders_booked">Orders Booked</string>
    <string name="out">"Out: "</string>
    <string name="password">Password</string>
    <string name="pic_alert">Picture Reminder</string>
    <string name="products">Products</string>
    <string name="description">Description</string>
    <string name="reg_name">© 2016, RetailWorks Field Solutions P Ltd</string>
    <string name="rejected">Rejected</string>
    <string name="remember">Remember Me</string>
    <string name="reports">Reports</string>
    <string name="reports_for">Reports Summary</string>
    <string name="searching">Searching …</string>
    <string name="sick_leave">Sick Leave</string>
    <string name="start">Start</string>
    <string name="store_address">Store Address</string>
    <string name="store_closed">Store Closed</string>
    <string name="store_last_visit">Last Visit Date</string>
    <string name="store_man">Manager/Owner</string>
    <string name="store_name">Store Name</string>
    <string name="store_not_found">Store Not Found!</string>
    <string name="store_not_open1">"Are you sure you want to mark the store as "</string>
    <string name="store_not_open2">. This cannot be undone.</string>
    <string name="store_open">Store Open</string>
    <string name="store_rejected">Store Rejected</string>
    <string name="store_status">Update Store Status:</string>
    <string name="store_type">Store Type</string>
    <string name="store_visited">Store Visited</string>
    <string name="store_updated">" updated as "</string>
    <string name="submit">Submit</string>
    <string name="success">Success …</string>
    <string name="take_pic">Take a picture of the Store Board</string>
    <string name="time_in">Time In</string>
    <string name="time_out">Time Out</string>
    <string name="unvisisted">Unvisited</string>
    <string name="up">Up</string>
    <string name="username">Username</string>
    <string name="verifying">Verifying Credentials …</string>
    <string name="visit_day">Visit Day</string>
    <string name="visit_end">End Visit</string>
    <string name="visit_start">Start Visit</string>
    <string name="visitor">Visitor</string>
    <string name="visitor_co">Company</string>
    <string name="visitor_details">Visitor Details</string>
    <string name="visitor_emp_code">Emp Code</string>
    <string name="waiting">Waiting for connection</string>

    <string name="jan">Jaunary</string>
    <string name="feb">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="aug">August</string>
    <string name="sept">September</string>
    <string name="oct">October</string>
    <string name="nov">November</string>
    <string name="dec">December</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_maps">Map</string>

    <string name="present">OnField</string>
    <string name="training">Training</string>
    <string name="travel">Travel</string>
    <string name="admin">Admin</string>
    <string name="absent">Absent</string>
    <string name="meeting">Meeting</string>

    <string name="present_msg">I am On Field</string>
    <string name="training_msg">In a Training Today</string>
    <string name="travel_msg">On an Official Travel</string>
    <string name="admin_msg">Admin - Doing Paperwork</string>
    <string name="absent_msg">Absent - Relaxing a bit</string>
    <string name="meeting_msg">Meeting and Networking</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
