<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="retailworks.in.field.app.LoginActivity"
    style="@style/top" android:layout_gravity="center_horizontal">
    <ImageView style="@style/FillWidth"
         android:gravity="center_horizontal" android:layout_gravity="center_horizontal"
            android:id="@+id/clientlogo" android:layout_height="150.0dip"
            android:layout_margin="20dp"
            android:src="@drawable/fullbox" android:scaleType="centerInside" />
    <LinearLayout style="@style/FillWidth"
        android:orientation="vertical" android:id="@+id/loginLayout"
        android:background="@drawable/box_square" android:padding="@dimen/activity_vertical_margin"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_marginBottom="2dp" android:layout_marginTop="2dp"
        android:layout_below="@id/clientlogo">
        <LinearLayout android:id="@+id/usernameLayout" style="@style/FillWidth">
            <TextView android:paddingRight="6.0dip"
                android:text="@string/username" style="@style/ListSubTitleText" />
            <EditText android:id="@+id/username"
                android:singleLine="true" android:inputType="numberSigned"
                style="@style/FillWidth" android:paddingLeft="16dp"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/passwordLayout" android:layout_below="@id/usernameLayout"
            style="@style/FillWidth">
            <TextView android:paddingRight="6.0dip"
                android:text="@string/password" style="@style/ListSubTitleText" />
            <EditText android:id="@+id/password" android:password="true"
                android:singleLine="true" style="@style/FillWidth"
                android:paddingLeft="16dp"/>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:id="@+id/rememberLayout"
            android:layout_below="@id/passwordLayout" style="@style/FillWidth">
            <CheckBox android:gravity="center" android:layout_gravity="center"
                android:id="@+id/user_checkbox" style="@style/Wrap" />
            <TextView android:textSize="16.0dip" android:layout_gravity="center"
                android:paddingLeft="6.0dip" android:text="@string/remember" android:layout_weight="5.0" android:layout_alignRight="@id/user_checkbox" style="@style/ListSubTitleText" />
            <Button android:textColor="@android:color/white" android:layout_gravity="center"
                android:id="@+id/loginButton" android:background="@drawable/box_button"
                android:text="@string/login" android:layout_weight="5.0" style="@style/Wrap" />
        </LinearLayout>
        <ProgressBar android:id="@+id/login_progress" android:visibility="invisible"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:layout_marginTop="0.0dip" android:layout_below="@id/passwordLayout"
            style="@android:style/Widget.Holo.ProgressBar.Horizontal"
            android:foregroundTint="@color/primary"/>
    </LinearLayout>

    <TextView android:textColor="@color/tbx_blue" android:gravity="center_horizontal"
        android:layout_below="@id/loginLayout"
        android:id="@+id/loginstatus"  style="@style/FillWidth" />

    <RelativeLayout
        android:layout_alignParentBottom="true" style="@style/FillWidth"
        android:layout_height="40.0dip" android:background="@drawable/box_bottom"
        android:gravity="center">

    <ImageView style="@style/Wrap" android:gravity="center"
        android:layout_height="30.0dip" android:layout_width="30.0dip"
        android:id="@+id/tbxlogo" android:layout_margin="3dp"
        android:src="@drawable/logobox" android:scaleType="centerInside" />

    <TextView android:textColor="@color/primary"
        android:gravity="center" android:layout_toRightOf="@id/tbxlogo"
        android:id="@+id/toolboxLogo" android:text="@string/reg_name"
        style="@style/Wrap" android:layout_height="40.0dip"/>
    </RelativeLayout>
</RelativeLayout>
